
		----------------------------------

GLOBAL NEWS - User visible changes.
At least, you had better search '[INCOMPATIBLE CHANGES]' for each version.

Current version by Shigio Yamaguchi

* gozilla: gozilla return to GLOBAL.
* htags: -o(--other) option added. This option list not only source files
  but also other files like 'README'.
* htags: configuration variable other_files added.
* htags: configuration variable definition_header={no|after|before} added.
* htags: configuration variable enable_grep and enable_idutils added.
* htags: -l(--each-line-tag) option deleted.
  From now on, htags works as if -l flag is always specified.
* global: path conversion optimized and bug fixed.

Version 4.3.1 - Jan 22 2002, by Shigio Yamaguchi

This is bug fix version.
* htags: global.cgi wasn't generated correctly.

Version 4.3 - Jan 10 2002, by Shigio Yamaguchi

* Support DJGPP.
* Support nvi-1.81.5.
* global.texi: chapter of less viewer, nvi-1.81.5 and reference manuals added.
* global,gtags: the -q option added.
* htags: fill anchors into path name.
* global: GTAGSROOT file supported.

Version 4.2 - Nov 24 2001, by Shigio Yamaguchi

* postgres support added.
  You need to configure GLOBAL with --with-postgres option.
* gtags: when no parser specified in config file, overloaded by default values.
* gtags: variable 'skip' accept full path name.
* htags: changed to refer to macros which is defined in other C source.
* htags: --caution option added.
* global.texi: reference manual added.
* gtags, htags: allow relative path name for --gtagsconf.

Version 4.1.1 - July 31, 2001, by Shigio Yamaguchi

* htags: bug fixed. bless.sh removed 'TARGET=mains'.
* htags: bug fixed. bless.sh didn't work without config file.
* configure: bug fixed. --srcdir option didn't work.
  now you can build project at any directory other than source directory.
* htags: generates rebuild.sh to redo the job with the previous context.